CHATS_SIT/force-app/main/default/objects/T_APPLN_CHILD_SUP__c.object
<CustomObject>
    <description>Peak application Child Support information</description>
    <fields>
        <fullName>DTE_BIRTH_CUST_NON__c</fullName>
        <description>DTE_BIRTH_CUST_NON</description>
        <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
        <label>DTE_BIRTH_CUST_NON</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IDN_APPLN_CHILD_SUP__c</fullName>
        <label>IDN_APPLN_CHILD_SUP</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IDN_APPLN_INDIV__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>IDN_APPLN_INDIV</label>
        <referenceTo>T_APPLN_INDIV__c</referenceTo>
        <relationshipLabel>Application Child Support Enforcements</relationshipLabel>
        <relationshipName>Application_Child_Support_Enforcements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IDN_STATE_CUST_NON__c</fullName>
        <description>IDN_STATE_CUST_NON</description>
        <label>IDN_STATE_CUST_NON</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IND_CASE_OPEN__c</fullName>
        <description>IND_CASE_OPEN</description>
        <label>IND_CASE_OPEN</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IND_COOP_PARENT__c</fullName>
        <description>IND_COOP_PARENT</description>
        <label>IND_COOP_PARENT</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NAM_FIRST_CUST_NON__c</fullName>
        <description>NAM_FIRST_CUST_NON</description>
        <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
        <label>NAM_FIRST_CUST_NON</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NAM_LAST_CUST_NON__c</fullName>
        <description>NAM_LAST_CUST_NON</description>
        <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
        <label>NAM_LAST_CUST_NON</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IDN_EXTNL__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>NBR_SSN_CUST_NON__c</fullName>
        <description>NBR_SSN_CUST_NON</description>
        <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
        <label>NBR_SSN_CUST_NON</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <label>Application Child Support Enforcement</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>ACSE-{0}</displayFormat>
        <label>Application Child Support Enforcement ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Application Child Support Enforcements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>